# minecraft-stats

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  test-duplicate.js
backend/: .gitignore  Cargo.toml
backend/crates/repository/: Cargo.toml
backend/crates/repository/migrations/: 20260613062349_initial_schema.sql  20260624064241_alerts_schema.sql  20260713173815_save_last_max_players_and_motd.sql  20260718124520_add_registered_date.sql  20260718125135_add_ping_time.sql
backend/crates/repository/src/: duplicate_detection.rs  postgres.rs  repository.rs
backend/pinger/: Cargo.toml
backend/pinger/src/utils/: minecraft_serialisation.rs  protocol.rs  version_parser.rs
backend/repository/: Cargo.toml
backend/repository/migrations/: 20260613062439_add_status_and_hashes.sql  20260613120015_ping_index.sql  20260614070532_admin_schema.sql  20260614112141_hidden_server.sql  20260622104321_server_type.sql  20260625184742_timeseries.sql
backend/repository/src/: duplicate_detection.rs  lib.rs  postgres.rs  repository.rs
backend/repository/src/models/: alert.rs  mod.rs  record.rs  server.rs
backend/rest-api/: .env.example  Cargo.toml
backend/rest-api/src/: error.rs  main.rs  response.rs  state.rs
backend/rest-api/src/clerk/: account_checker.rs  mod.rs  model.rs
backend/rest-api/src/middleware/: admin.rs  auth.rs  mod.rs  statistics.rs
backend/rest-api/src/routes/: mod.rs  notification.rs  record.rs  server.rs
backend/rest-api/src/routes/admin/: mod.rs  routes.rs  server.rs  users.rs
backend/rest-api/src/routes/server/: create_alert.rs  create_server.rs  delete_server.rs  get_icon.rs  get_server.rs  list_alert.rs  list_server.rs  mod.rs  router.rs  update_server.rs
backend/rest-api/src/services/: clerk_service.rs  mod.rs
backend/rest-api/src/services/cache/: mod.rs  record_caching.rs
backend/rest-api/src/services/clerk/: account_checker.rs  clerk_service.rs  mod.rs  model.rs
backend/rest-api/src/services/statistics/: loki.rs
backend/rest-api/src/utils/: cache.rs  mod.rs  real_ip.rs
backend/worker/: .env.example  Cargo.toml
backend/worker/src/: main.rs
backend/worker/src/tasks/: communication.rs  mod.rs  pinger.rs  sender.rs  verifier.rs
deploy/: .env.example  docker-compose.yml
deploy/frontend/: Dockerfile
deploy/rest-api/: Dockerfile
deploy/worker/: Dockerfile
frontend/: .env.example  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/public/: sw.js
frontend/public/fonts/: fonts.css
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: MinecraftMotd.tsx
frontend/src/components/AdminDashboard/: LogsTab.tsx  OverviewTab.tsx  ServersTab.tsx  SettingsTab.tsx  UsersTab.tsx
frontend/src/components/ServerComparison/: SelectedServersTags.tsx
frontend/src/components/ServerDetail/: AlertsSection.tsx  PlayerChart.tsx  ServerDetailHeader.tsx  StatsSection.tsx  TimeIntervalSelector.tsx
frontend/src/components/ServerList/: Hero3D.tsx  MiniChart.tsx  ServerCard.tsx  ServerListFilters.tsx
frontend/src/components/layout/: AddServerModal.tsx  Footer.tsx  Header.tsx  LayoutContext.tsx  SearchBar.tsx  ThemeToggle.tsx  index.tsx
frontend/src/components/ui/: calendar.tsx  card.tsx  select.tsx
frontend/src/contexts/: AdminContext.tsx  LanguageContext.tsx
frontend/src/lib/: api.ts  chartUtils.ts  utils.ts
frontend/src/locales/: en.json  fr.json
frontend/src/pages/: Privacy.tsx  Terms.tsx
frontend/src/pages/Account/: index.tsx
frontend/src/pages/AdminDashboard/: index.tsx
frontend/src/pages/ServerComparison/: MultiServerChart.tsx  index.tsx
frontend/src/pages/ServerDetail/: index.tsx
pinger/: Cargo.toml
pinger/src/: lib.rs
pinger/src/models/: model.rs
pinger/src/utils/: dns.rs  error.rs  mod.rs  protocol.rs
repository/: Cargo.toml
repository/src/: lib.rs  repository.rs
repository/src/models/: record.rs  server.rs
rest-api/: Cargo.toml
rest-api/src/: error.rs  main.rs  response.rs  state.rs
rest-api/src/clerk/: account_checker.rs
rest-api/src/routes/: mod.rs  record.rs  server.rs
src/: App.tsx  index.css  main.tsx
src/components/: Header.tsx  PlayerChart.tsx  ServerCard.tsx  ServerDetail.tsx  ServerList.tsx
src/components/ServerDetail/: PlayerChart.tsx
src/components/ServerList/: MiniChart.tsx  ServerCard.tsx
src/components/layout/: AddServerModal.tsx  Header.tsx  SearchBar.tsx  index.tsx
src/components/ui/: button.tsx
src/contexts/: SearchContext.tsx  ThemeContext.tsx
src/lib/: api.ts
src/pages/ServerComparison/: MultiServerChart.tsx  index.tsx
src/pages/ServerDetail/: index.tsx
src/pages/ServerList/: index.tsx
worker/: Cargo.toml
worker/src/: main.rs
(+4 files in other folders)
