[package]
name = "pinger"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
log = "0.4.31"
hickory-resolver = { version = "0.26.1", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["full"] }