[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3.47", features = ["serde", "formatting"] }
async-trait = "0.1.89"
sqlx = { version = "0.9.0", features = ["time", "postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"