[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
repository = { path = "../repository" }
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "time", "runtime-tokio"] }
time = { version = "0.3.47", features = ["serde", "formatting"] }
tower-http = { version = "0.6.11", features = ["cors"] }