[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3.47", features = ["serde", "formatting"] }
hickory-resolver = { version = "0.26.1", features = ["tokio"] }
sqlx = { version = "0.9.0", features = ["time", "postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
hickory-proto = "0.26.1"
async-trait = "0.1.89"
serde_json = "1.0.150"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"
regex = "1.11.1"
futures = "0.3.32"