[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rest-api"
path = "src/main.rs"

[dependencies]
repository = { path = "../crates/repository" }
#minecraft-pinger = { path = "../../../minecraft-pinger" }
minecraft-pinger = { git = "https://github.com/Flash303/minecraft-pinger" }

sqlx = { version = "0.9.0", features = ["postgres", "time", "runtime-tokio"] }
time = { version = "0.3.47", features = ["serde", "formatting"] }
tower-http = { version = "0.7.0", features = ["cors", "compression-full"] }
jwt-compact = { version = "0.8.0", features = ["rsa"] }
reqwest = { version = "0.13.0", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

futures = "0.3.32"

thiserror = "2.0.18"
log = "0.4.33"
env_logger = "0.11.11"

base64 = "0.22.1"
rsa = "0.9.10"
sha2 = "0.10.8"
tower_governor = "0.8.0"
