[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
minecraft-pinger = { git = "https://github.com/Flash303/minecraft-pinger" }
repository = { path = "../repository" }
tokio = { version = "1.52.3", features = ["full"] }
time = { version = "0.3.47", features = ["serde", "formatting"] }
#sqlx = { version = "0.9.0", features = ["postgres", "time", "runtime-tokio"] }
serde_json = "1.0.150"
